adjusted the cards so all info including the functioning button are inside.

--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,14 @@
     <title>Redux Shopping Cart Example</title>
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
-    <link href="../src/css/style.css">
-        <!-- Compiled and minified JavaScript -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel='stylesheet' href="../src/css/style.css">
+
+    <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
 
   </head>
-  <body>
+  <body style='margin:80px; background-color:#DCDCDC; font-family: Arial, Helvetica, sans-serif;'>
     <div id="root"></div>
     <!--
       This HTML file is a template.
